[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphs_JuvyArch"
version = "0.1.0"
description = "Graph algorithms package including Dijkstra's shortest path"
authors = [{ name = "<Juvia Archuleta>"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]